Test/invalid_tests/bad_7.rwlz
// ERROR: Faltan corchetes en declaración de metadata BepInPlugin
BepInPlugin("TestMod", "Missing Brackets Test", "1.0")]

/* Error: faltan corchetes en metadata */

int BadFunction() {
    return 42;
}